--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
-  "name": "angular-pokemon",
-  "version": "0.0.2",
-  "main": "angular-pokemon.js",
-  "dependencies": {
-    "angular": "~1.2.0"
-  },
+  "name": "angular-forkit",
+  "version": "0.0.1",
+  "homepage": "https://github.com/gdi2290/angular-forkit",
+  "authors": [
+    "gdi2290 <github@gdi2290.com>"
+  ],
+  "description": "Pokemon directive for Angular.js",
+  "license": "MIT",
   "ignore": [
     "**/.*",
-    "*.yml",
-    "*.xml",
     "node_modules",
     "bower_components",
     "test",
