--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-  "name": "angular-forkit",
-  "version": "0.0.1",
-  "homepage": "https://github.com/gdi2290/angular-forkit",
+  "name": "angular-pokemon",
+  "version": "0.0.2",
+  "homepage": "https://github.com/gdi2290/angular-pokemon",
   "authors": [
     "gdi2290 <github@gdi2290.com>"
   ],
+  "main": "angular-pokemon.js",
   "description": "Pokemon directive for Angular.js",
   "license": "MIT",
   "ignore": [
@@ -13,5 +14,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.2.0"
+  }
 }
