--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-pokemon",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "https://github.com/gdi2290/angular-pokemon",
   "authors": [
     "gdi2290 <github@gdi2290.com>"
@@ -16,6 +16,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.0"
+    "angular": "*"
   }
 }
